compilers/ID/cool/regression/BASE_cgtest/old_cool/block_incorrect.cl
class Main is
    main() : Int is begin "123"; 1; false; end  end;
end;
